; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/fieldbus/anybuss/extr_arcx-anybus.c_can_power_is_enabled.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/fieldbus/anybuss/extr_arcx-anybus.c_can_power_is_enabled.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.regulator_dev = type { i32 }
%struct.controller_priv = type { i64 }

@CPLD_STATUS1 = common dso_local global i64 0, align 8
@CPLD_STATUS1_CAN_POWER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.regulator_dev*)* @can_power_is_enabled to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @can_power_is_enabled(%struct.regulator_dev* %0) #0 {
  %2 = alloca %struct.regulator_dev*, align 8
  %3 = alloca %struct.controller_priv*, align 8
  store %struct.regulator_dev* %0, %struct.regulator_dev** %2, align 8
  %4 = load %struct.regulator_dev*, %struct.regulator_dev** %2, align 8
  %5 = call %struct.controller_priv* @rdev_get_drvdata(%struct.regulator_dev* %4)
  store %struct.controller_priv* %5, %struct.controller_priv** %3, align 8
  %6 = load %struct.controller_priv*, %struct.controller_priv** %3, align 8
  %7 = getelementptr inbounds %struct.controller_priv, %struct.controller_priv* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load i64, i64* @CPLD_STATUS1, align 8
  %10 = add nsw i64 %8, %9
  %11 = call i32 @readb(i64 %10)
  %12 = load i32, i32* @CPLD_STATUS1_CAN_POWER, align 4
  %13 = and i32 %11, %12
  %14 = icmp ne i32 %13, 0
  %15 = xor i1 %14, true
  %16 = zext i1 %15 to i32
  ret i32 %16
}

declare dso_local %struct.controller_priv* @rdev_get_drvdata(%struct.regulator_dev*) #1

declare dso_local i32 @readb(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
